# backend/docs/swagger.yaml
@@ -128,6 +128,83 @@ definitions:
         description: 缩略图地址
         type: string
     type: object
+  picture.CreateOutPaintingTaskRequest:
+    properties:
+      parameters:
+        allOf:
+        - $ref: '#/definitions/picture.ImageParameters'
+        description: 图像处理任务的参数
+      pictureId:
+        description: 图片ID
+        example: ""
+        type: string
+    type: object
+  picture.CreateOutPaintingTaskResponse:
+    properties:
+      code:
+        description: 错误码（失败时返回）
+        type: string
+      message:
+        description: 错误信息（失败时返回）
+        type: string
+      output:
+        allOf:
+        - $ref: '#/definitions/picture.Output'
+        description: 任务输出信息（成功时返回）
+      requestId:
+        description: 请求唯一标识符
+        type: string
+    type: object
+  picture.GetOutPaintingResponse:
+    properties:
+      output:
+        allOf:
+        - $ref: '#/definitions/picture.TaskDetailOutput'
+        description: 任务输出信息（一定包含）
+      requestId:
+        description: 请求唯一标识
+        type: string
+      usage:
+        allOf:
+        - $ref: '#/definitions/picture.Usage'
+        description: 图像统计信息（仅在成功时返回）
+    type: object
+  picture.ImageParameters:
+    properties:
+      addWatermark:
+        description: 是否添加水印
+        type: boolean
+      angle:
+        description: 图像旋转角度（单位：度）
+        type: integer
+      bestQuality:
+        description: 是否启用最佳质量
+        type: boolean
+      bottomOffset:
+        description: 图像底部的偏移量
+        type: integer
+      leftOffset:
+        description: 图像左侧的偏移量
+        type: integer
+      limitImageSize:
+        description: 是否限制图像大小
+        type: boolean
+      outputRatio:
+        description: 输出图像的宽高比（例如："16:9"）
+        type: string
+      rightOffset:
+        description: 图像右侧的偏移量
+        type: integer
+      topOffset:
+        description: 图像顶部的偏移量
+        type: integer
+      xScale:
+        description: 图像的水平缩放比例，范围在1.0 ~ 3.0
+        type: number
+      yScale:
+        description: 图像的垂直缩放比例，范围在1.0 ~ 3.0
+        type: number
+    type: object
   picture.ListPictureResponse:
     properties:
       current:
@@ -165,6 +242,15 @@ definitions:
       total:
         description: 总记录数
         type: integer
+    type: object
+  picture.Output:
+    properties:
+      taskId:
+        description: 任务的唯一标识符
+        type: string
+      taskStatus:
+        description: 任务状态：PENDING、RUNNING、SUSPENDED、SUCCEEDED、FAILED、UNKNOWN
+        type: string
     type: object
   picture.PictureEditByBatchRequest:
     properties:
@@ -414,6 +500,55 @@ definitions:
       userId:
         example: "0"
         type: string
+    type: object
+  picture.TaskDetailOutput:
+    properties:
+      code:
+        description: 错误码（失败时返回）
+        type: string
+      endTime:
+        description: 任务完成时间（成功或失败时返回）
+        type: string
+      message:
+        description: 错误信息（失败时返回）
+        type: string
+      outputImageUrl:
+        description: 输出图像的 URL（成功时返回）
+        type: string
+      scheduledTime:
+        description: 任务调度时间（成功或失败时返回）
+        type: string
+      submitTime:
+        description: 任务提交时间（成功或失败时返回）
+        type: string
+      taskId:
+        description: 任务的唯一标识符
+        type: string
+      taskMetrics:
+        allOf:
+        - $ref: '#/definitions/picture.TaskMetrics'
+        description: 任务结果统计（执行中时返回）
+      taskStatus:
+        description: 任务状态：PENDING、RUNNING、SUSPENDED、SUCCEEDED、FAILED、UNKNOWN
+        type: string
+    type: object
+  picture.TaskMetrics:
+    properties:
+      failed:
+        description: 失败任务数
+        type: integer
+      succeeded:
+        description: 成功任务数
+        type: integer
+      total:
+        description: 总任务数
+        type: integer
+    type: object
+  picture.Usage:
+    properties:
+      imageCount:
+        description: 生成的图片数量
+        type: integer
     type: object
   space.ListSpaceResponse:
     properties:
@@ -1023,6 +1158,64 @@ paths:
           schema:
             $ref: '#/definitions/common.Response'
       summary: 带有缓存的分页获取一系列图片信息
+      tags:
+      - picture
+  /v1/picture/out_painting/create_task:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 任务的ID
+        in: query
+        name: taskId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 获取成功，返回任务进展信息
+          schema:
+            allOf:
+            - $ref: '#/definitions/common.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/picture.GetOutPaintingResponse'
+              type: object
+        "400":
+          description: 获取失败，详情见响应中的code
+          schema:
+            $ref: '#/definitions/common.Response'
+      summary: 获取AI扩图任务信息「登录校验」
+      tags:
+      - picture
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 创建扩图任务所需信息
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/picture.CreateOutPaintingTaskRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 创建成功，返回任务信息
+          schema:
+            allOf:
+            - $ref: '#/definitions/common.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/picture.CreateOutPaintingTaskResponse'
+              type: object
+        "400":
+          description: 获取失败，详情见响应中的code
+          schema:
+            $ref: '#/definitions/common.Response'
+      summary: 创建AI扩图任务请求「登录校验」
       tags:
       - picture
   /v1/picture/review:
